--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: python
 python:
   - "3.7"
+after_success:
+  coveralls
 install:
   - pip install pipenv
   - pipenv install --dev
 script:
   - python -m pytest -vv --capture=tee-sys
+  - coverage run --source . -m pytest
+  - sonar-scanner
