chore() Exclude setup.py from coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName = @apecr/sqlalchemy-expression-language-tutorial
 sonar.sources = .
 sonar.tests = tests
 sonar.exclusions = **/venv/**,**/tests/**,**/coverage-reports/**,**/lib/**,**/docs/**,**/swagger/**,**/htmlcov/**,**/instance/**,setup.py
-sonar.coverage.exclusions = main*.py
+sonar.coverage.exclusions = main*.py,setup.py
 sonar.python.coverage.reportPaths = coverage-reports/coverage.xml
 sonar.links.scm = https://github.com/apecr/sqlalchemy-expression-language-tutorial.git
 sonar.links.ci = https://travis-ci.org/apecr/sqlalchemy-expression-language-tutorial
